result/assignment4/make.log
rm -rf build
rm -f asciiclient
cc -Wall -Wextra -fdiagnostics-color=auto -g src/arguments.c -c -o build/arguments.o
cc -Wall -Wextra -fdiagnostics-color=auto -g src/assignment4.c -c -o build/assignment4.o
src/assignment4.c: In function 'writeNet':
src/assignment4.c:89:14: warning: operation on 'len' may be undefined [-Wsequence-point]
     if ((len = strlen(src)) < bufSize - countDigits(len)) {
         ~~~~~^~~~~~~~~~~~~~
src/assignment4.c:92:25: error: expected ';' before '}' token
         strcat(dest,",")
                         ^
                         ;
     } else {
     ~                    
src/assignment4.c: In function 'assignment4':
src/assignment4.c:139:9: warning: unused variable 'sdD' [-Wunused-variable]
     int sdD;
         ^~~
src/assignment4.c:138:25: warning: variable 'data' set but not used [-Wunused-but-set-variable]
     struct sockaddr_in6 data = {};
                         ^~~~
src/assignment4.c:125:60: warning: unused parameter 'nick' [-Wunused-parameter]
 void assignment4(const char *ipaddr, in_port_t port, char *nick, char *msg) {
                                                      ~~~~~~^~~~
src/assignment4.c:125:72: warning: unused parameter 'msg' [-Wunused-parameter]
 void assignment4(const char *ipaddr, in_port_t port, char *nick, char *msg) {
                                                                  ~~~~~~^~~
make: *** [Makefile:20: build/assignment4.o] Error 1
